--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Django==1.8
-astm==0.5.0
+Django>=1.8.2
 Unipath==1.1
-edc-registration==0.1.0
 django-simple-history===1.6.1
+-e git+https://github.com/botswana-harvard/edc-base@develop#egg=edc-base
+-e git+https://github.com/botswana-harvard/edc-registration@develop#egg=edc-registration
+-e git+https://github.com/botswana-harvard/edc-appointment@develop#egg=edc-appointment
