--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django>=1.8.2
 Unipath==1.1
 django-simple-history===1.6.1
+python-dateutil==2.4.2
 -e git+https://github.com/botswana-harvard/edc-base@develop#egg=edc-base
 -e git+https://github.com/botswana-harvard/edc-registration@develop#egg=edc-registration
 -e git+https://github.com/botswana-harvard/edc-appointment@develop#egg=edc-appointment
