--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ python-dateutil==2.4.2
 -e git+https://github.com/botswana-harvard/edc-base@develop#egg=edc-base
 -e git+https://github.com/botswana-harvard/edc-registration@develop#egg=edc-registration
 -e git+https://github.com/botswana-harvard/edc-appointment@develop#egg=edc-appointment
+-e git+https://github.com/botswana-harvard/edc-appointment@develop#egg=edc-identifier
