--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ Django>=1.6
 Unipath==1.1
 django-simple-history
 python-dateutil
+fake-factory
+factory-boy
 -e git+https://github.com/botswana-harvard/edc-base@develop#egg=edc-base
 -e git+https://github.com/botswana-harvard/edc-constants@develop#egg=edc-constants
