--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,8 @@ pyodbc
 pycups
 git+https://github.com/botswana-harvard/edc-base@develop#egg=edc-base
 git+https://github.com/botswana-harvard/edc-constants@develop#egg=edc-constants
+git+https://github.com/erikvw/django-revision@develop#egg=django-revision
+git+https://github.com/botswana-harvard/edc-device@develop#egg=edc-device
+git+https://github.com/botswana-harvard/edc-sync@develop#egg=edc-sync
+git+https://github.com/botswana-harvard/edc-crypto-fields@develop#egg=edc-crypto-fields
+git+https://github.com/botswana-harvard/edc-audit@develop#egg=edc-audit
