--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ git+https://github.com/botswana-harvard/edc-base@develop#egg=edc-base
 git+https://github.com/botswana-harvard/edc-constants@develop#egg=edc-constants
 git+https://github.com/erikvw/django-revision@develop#egg=django-revision
 git+https://github.com/botswana-harvard/edc-device@develop#egg=edc-device
+git+https://github.com/botswana-harvard/edc-identifier@develop#egg=edc-identifier
 git+https://github.com/botswana-harvard/edc-registration@develop#egg=edc-registration
 git+https://github.com/botswana-harvard/edc-quota@develop#egg=edc-quota
 git+https://github.com/botswana-harvard/edc-sync@develop#egg=edc-sync
