--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,5 @@
-Django==1.6
-M2Crypto==0.22.3
-django-tastypie
-django_extensions
-python-dateutil
-django_databrowse
-factory_boy
-numpy
-Unipath
-GitPython
-factory-boy
-pytz
-pyodbc
-pycups
-git+https://github.com/botswana-harvard/edc-audit@develop#egg=edc-audit
+Django
 git+https://github.com/botswana-harvard/edc-base@develop#egg=edc-base
+git+https://github.com/erikvw/django-crypto-fields@develop#egg=django_crypto_fields
 git+https://github.com/botswana-harvard/edc-constants@develop#egg=edc-constants
-git+https://github.com/botswana-harvard/edc-crypto-fields@develop#egg=edc-crypto-fields
-git+https://github.com/botswana-harvard/edc-device@develop#egg=edc-device
-git+https://github.com/botswana-harvard/edc-identifier@develop#egg=edc-identifier
-git+https://github.com/botswana-harvard/edc-registration@develop#egg=edc-registration
-git+https://github.com/botswana-harvard/edc-quota@develop#egg=edc-quota
-git+https://github.com/botswana-harvard/edc-sync@develop#egg=edc-sync
 git+https://github.com/erikvw/django-revision@develop#egg=django-revision
