--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
-ignore = E226,E302,E41,F401
-max-line-length = 120
-max-complexity = 10
-
+ignore = E226,E302,E41,F401,W503
+max-line-length = 90
+max-complexity = 14
+exclude=edc_consent/migrations/*,example/*,edc_consent/management/*
