--- a/.travis.yml
+++ b/.travis.yml
@@ -1,52 +1,33 @@
+dist: trusty
+sudo: required
+
 language: python
 python:
-  - "2.7"
-#  - "3.2"
-#  - "3.3"
-#  - "3.4"
-#  - "nightly"
-env:
-  - DJANGO_VERSION=1.6
-#  - DJANGO_VERSION=1.7
-#  - DJANGO_VERSION=1.8
-
-
-addons:
-  apt_packages:
-     - swig
-     - libssl-dev
-     - libssl0.9.8
-     - python-m2crypto
-     - libcups2-dev
-     - unixodbc-dev
-     - python-mysqldb
+  - "3.5.1"
 
 services:
   - mysql
 
 before_install:
-    - "export DISPLAY=:99.0"
+    - "export DISPLAY=:99.0"                         
     - "sh -e /etc/init.d/xvfb start"
     - sleep 3 # give xvfb some time to start
 
-virtualenv:
-  system_site_packages: true
+branches:
+  only:
+    - develop
 
 install:
   - pip install --upgrade pip
-  - pip install -q Django==$DJANGO_VERSION
+  - pip install -r requirements.txt
   - pip install flake8
   - pip install coveralls
-  - pip install M2Crypto
-  - pip install pyodbc
-  - pip install pycups
-  - pip install mysql-python
-  - pip install -q -r requirements.txt
 
 before_script:
-  - flake8 edc_consent
-  - mysql -e 'create database mb CHARACTER SET utf8;'
-  - mysql -e 'create database mb_lab CHARACTER SET utf8;'
+  - flake8 edc_consnent
+  - mysql -e 'create database edc character set utf8;'
+  - python manage.py makemigrations
+  - python manage.py migrate
 
 script: 
   - coverage run --source=edc_consent manage.py test
