--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ install:
   - pip install coveralls
 
 before_script:
-  - flake8 edc_consnent
+  - flake8 edc_consent
   - mysql -e 'create database edc character set utf8;'
   - python manage.py makemigrations
   - python manage.py migrate
