--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,9 @@ git+https://github.com/botswana-harvard/edc-content-type-map@develop#egg=edc_con
 git+https://github.com/botswana-harvard/edc-device@develop#egg=edc_device
 git+https://github.com/botswana-harvard/edc-identifier@develop#edc_identifier
 git+https://github.com/botswana-harvard/edc-example@develop#edc_example
-git+https://github.com/botswana-harvard/edc-consent@develop#edc_consent
 git+https://github.com/botswana-harvard/edc-timepoint@develop#edc_timepoint
 git+https://github.com/botswana-harvard/edc-protocol@develop#edc_protocol
 git+https://github.com/botswana-harvard/edc-lab@develop#edc_lab
 git+https://github.com/botswana-harvard/edc-offstudy@develop#edc_offstudy
+git+https://github.com/botswana-harvard/edc-appointment@develop#edc_appointment
 git+https://github.com/botswana-harvard/edc-dashboard@develop#edc_dashboard
