fix test, upgrade license, update imports

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,4 @@ git+https://github.com/clinicedc/edc-lab@develop#edc_lab
 git+https://github.com/clinicedc/edc-offstudy@develop#edc_offstudy
 git+https://github.com/clinicedc/edc-appointment@develop#edc_appointment
 git+https://github.com/clinicedc/edc-dashboard@develop#edc_dashboard
+git+https://github.com/clinicedc/edc-model-fields@develop#egg=edc-model-fields
