--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,5 @@ git+https://github.com/clinicedc/edc-action-item@develop#egg=edc-action-item
 git+https://github.com/clinicedc/edc-prn@develop#egg=edc-prn
 git+https://github.com/clinicedc/edc-locator@develop#egg=edc-locator
 git+https://github.com/clinicedc/edc-visit-schedule@develop#egg=edc-visit-schedule
+git+https://github.com/clinicedc/edc-subject-dashboard@develop#egg=edc-subject-dashboard
+git+https://github.com/clinicedc/edc-dashboard@develop#egg=edc-dashboard
