update setup files, flake8

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,4 +2,4 @@
 ignore = E226,E302,E41,F401,W503
 max-line-length = 90
 max-complexity = 14
-exclude=edc_consent/migrations/*,example/*,edc_consent/management/*
+exclude=edc_consent/migrations/*
