--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,4 @@
 edc-locator
 edc-visit-schedule
-
-git+https://github.com/clinicedc/edc-metadata@develop#egg=edc-metadata
-git+https://github.com/clinicedc/edc-visit-tracking@develop#egg=edc-visit-tracking
-git+https://github.com/clinicedc/edc-appointment@develop#egg=edc-appointment
-git+https://github.com/clinicedc/edc-registration@develop#egg=edc-registration
-git+https://github.com/clinicedc/edc-appointment@develop#egg=edc-appointment
-git+https://github.com/clinicedc/edc-facility@develop#egg=edc-facility
-git+https://github.com/clinicedc/edc-identifier@develop#egg=edc-identifier
-git+https://github.com/clinicedc/edc-model-admin#egg=edc-model-admin
-git+https://github.com/clinicedc/edc-timepoint#egg=edc-timepoint
-git+https://github.com/clinicedc/edc-form-validators#egg=edc-form-validators
-git+https://github.com/clinicedc/edc-reference#egg=edc-reference
-git+https://github.com/clinicedc/edc-lab#egg=edc-lab
-git+https://github.com/clinicedc/edc-label#egg=edc-label
-git+https://github.com/clinicedc/edc-navbar#egg=edc-navbar
-git+https://github.com/clinicedc/edc-model-wrapper#egg=edc-model-wrapper
-git+https://github.com/clinicedc/edc-action-item@develop#egg=edc-action-item
-git+https://github.com/clinicedc/edc-prn@develop#egg=edc-prn
-git+https://github.com/clinicedc/edc-subject-dashboard@develop#egg=edc-subject-dashboard
-git+https://github.com/clinicedc/edc-dashboard@develop#egg=edc-dashboard
+model-mommy
+faker
