--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
-ignore = E226,E302,E41,F401,W503
+ignore = E226,E302,E41,F401,W503,W504,W605
 max-line-length = 90
 max-complexity = 14
 exclude=edc_consent/migrations/*
