--- a/tox.ini
+++ b/tox.ini
@@ -16,15 +16,16 @@ setenv =
     PYTHONWARNINGS=module::DeprecationWarning
 commands =
   flake8 edc_consent
-  coverage run setup.py test {posargs}
+  coverage run runtests.py {posargs}
   codecov -e TOXENV
 deps =
   -rrequirements.txt
+  -rrequirements.tests.txt
   coverage
   codecov>=1.4.0
   flake8
   django21: Django>=2.1,<2.2
-  django22: Django==2.2rc1
+  django22: Django>=2.2,<2.3
   djangotrunk: https://github.com/django/django/tarball/master
 
 [travis]
