--- a/requirements.tests.txt
+++ b/requirements.tests.txt
@@ -1,6 +1,16 @@
+edc-consent
+edc-facility
+edc-identifier
+edc-lab
 edc-locator
 edc-notification
+edc-randomization
+edc-reference
+edc-registration
 edc-visit-schedule
-model-bakery
+edc-visit-tracking
+edc-facility
+edc_offstudy
+edc-timepoint
 faker
-edc-test-utils
+model-bakery
