--- a/tox.ini
+++ b/tox.ini
@@ -15,15 +15,16 @@ setenv =
     PYTHONWARNINGS=module::DeprecationWarning
 commands =
     flake8 edc_consent
+    pip install -U git+https://github.com/erikvw/django-simple-history@admin_revert_permissions
     coverage run runtests.py {posargs}
     codecov -e TOXENV
 deps =
     -rrequirements.txt
     -rrequirements.tests.txt
+    edc-test-utils
     coverage
     codecov>=1.4.0
     flake8
-    django21: Django>=2.1,<2.2
     django22: Django>=2.2,<2.3
     djangotrunk: https://github.com/django/django/tarball/master
 
