--- a/requirements.tests.txt
+++ b/requirements.tests.txt
@@ -1,16 +1,31 @@
+edc-action-item
+edc-adverse-event
+edc-auth
 edc-consent
+edc-crf
+edc-dashboard
+edc-data-manager
+edc-device
 edc-facility
 edc-identifier
 edc-lab
+edc-lab-dashboard
 edc-locator
+edc-metadata-rules
+edc-model-admin
+edc-navbar
 edc-notification
+edc-offstudy
+edc-prn
+edc-protocol
 edc-randomization
+edc-reportable
 edc-reference
 edc-registration
+edc-sites
+edc-subject-dashboard
+edc-subject-model-wrappers
+edc-timepoint
+edc-utils
 edc-visit-schedule
 edc-visit-tracking
-edc-facility
-edc_offstudy
-edc-timepoint
-faker
-model-bakery
