--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,7 +39,7 @@ repos:
       - id: check-executables-have-shebangs
       - id: check-merge-conflict
       - id: debug-statements
-      - id: detect-private-key
+#      - id: detect-private-key
 
   - repo: https://github.com/adrienverge/yamllint
     rev: v1.35.1
