Re-enable detect-private-key hook, exclude test files

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,7 +36,12 @@ repos:
       - id: check-merge-conflict
       - id: check-toml
       - id: debug-statements
-#      - id: detect-private-key
+      - id: detect-private-key
+        exclude: |
+              (?x)^(
+                edc_consent/tests/crypto_keys/user-rsa-local-private.pem|
+                edc_consent/tests/crypto_keys/user-rsa-restricted-private.pem
+              )$
       - id: fix-byte-order-marker
       - id: requirements-txt-fixer
         files: requirements/.*\.txt$
